Item lend start

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -37,7 +37,7 @@ RewriteRule ^item$ item.php?request=overview [QSA,NC,L]
 RewriteRule ^item/consumable$ item.php?request=consumable [QSA,NC,L]
 RewriteRule ^item/new$ item.php?request=new [QSA,NC,L]
 RewriteRule ^item/edit/([0-9-]+)$ item.php?request=edit&ID=$1 [QSA,NC,L]
-RewriteRule ^item/lend$ item.php?request=lend [QSA,NC,L]
+RewriteRule ^item/lended$ item.php?request=lended [QSA,NC,L]
 
 #Settings
 
