--- a/public/.htaccess
+++ b/public/.htaccess
@@ -40,6 +40,14 @@ RewriteRule ^item/edit/([0-9-]+)$ item.php?request=edit&ID=$1 [QSA,NC,L]
 RewriteRule ^item/lended$ item.php?request=lended [QSA,NC,L]
 RewriteRule ^item/lend/add$ item.php?request=addLend [QSA,NC,L]
 
+#Todo
+
+RewriteRule ^todo$ todo.php?request=overview [QSA,NC,L]
+RewriteRule ^todo/new$ todo.php?request=new [QSA,NC,L]
+RewriteRule ^todo/category$ todo.php?request=categoryOverview [QSA,NC,L]
+RewriteRule ^todo/category/new$ todo.php?request=categoryNew [QSA,NC,L]
+RewriteRule ^todo/category/edit/([0-9-]+)$ todo.php?request=categoryEdit&ID=$1 [QSA,NC,L]
+
 #Settings
 
 RewriteRule ^settings/user$ user_profile.php?request=personal_data [QSA,NC,L]
